--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,9 @@
 @import '~iview/src/styles/index.less';
 
-@menu-dark-title: #001529;
-@menu-dark-active-bg: #000c17;
-@layout-sider-background: #001529;
+@menu-dark-title: #51576E;
+@menu-dark-active-bg: #51576E;
+@layout-sider-background: #51576E;
+// 主题色
+@primary-color: #636BFF;
+@primary-color: #636BFF;
+@link-color: #636BFF;
