--- a/src/index.less
+++ b/src/index.less
@@ -1,9 +1,3 @@
 @import '~iview/src/styles/index.less';
-
-@menu-dark-title: #51576E;
-@menu-dark-active-bg: #51576E;
-@layout-sider-background: #51576E;
-// 主题色
-@primary-color: #636BFF;
-@primary-color: #636BFF;
-@link-color: #636BFF;
+@import './assets/css/index.less';
+@import './assets/css/theme.less';
