--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,3 @@
 @import '~iview/src/styles/index.less';
-@import './assets/css/index.less';
-@import './assets/css/theme.less';
+@import './assets/less/index.less';
+@import './assets/less/theme.less';
