fix:添加统一样式

--- a/src/assets/less/index.less
+++ b/src/assets/less/index.less
@@ -11,4 +11,8 @@
     color: @primary-color !important;
     background: @white-color !important;
   }
+  // 面包屑
+  .ivu-breadcrumb, .ivu-breadcrumb  a, .ivu-breadcrumb > span:last-child{
+    color: @white-color;
+  }
 }
