--- a/src/components/main/main.less
+++ b/src/components/main/main.less
@@ -2,6 +2,7 @@
   .logo-con{
     height: 64px;
     padding: 10px;
+    background: @primary-color;
     img{
       height: 44px;
       width: auto;
@@ -10,7 +11,8 @@
     }
   }
   .header-con{
-    background: #fff;
+    background: @primary-color;
+    color: @white-color;
     padding: 0 20px;
     width: 100%;
   }
