定义主题色

--- a/src/assets/less/theme.less
+++ b/src/assets/less/theme.less
@@ -1,8 +1,28 @@
-@menu-dark-title: #51576E;
-@menu-dark-active-bg: #51576E;
-@layout-sider-background: #51576E;
-// 主题色
-@primary-color: #636BFF;
-@link-color: #636BFF;
-// 白色
+
+@primary: #636BFF;    // 主题色视觉配色、重要的文字，按钮, icon颜色
+// 重要
+@prominent: #272733;  // 强调性文字、突出性信息、标题信息
+// 一般
+@common: #51576E;     // 正文、表单说明、切换菜单文字、辅助文字
+@minor: #c2c2cc;      // 次要文字、默认icon、默认输入框提示性文字
+// 较弱
+@frame: #c3c4d9;      // 表单输入框颜色，页码框颜色
+@split: #e6e6ed;      // 分割线、边框颜色
+@bgcolor: #f2f3fa;    // 背景色、按钮不可点击颜色
+// 辅色
+@auxiGreen: #73d13d;  // 用于部分可点击icon背景色等
+@auxiRed: #F85C5D;    // 用于部分可点击icon背景色等
+@auxiGray: #E6E6ED;   // 用于表格的表头颜色
+@auxiWhite: #f2f3fa;  // 用于表格的鼠标经过颜色
+
 @white-color: #fff;
+
+/*
+* view-design定义颜色
+*/
+@primary-color: @primary;
+@link-color: @primary;
+@menu-dark-title: @common;
+@menu-dark-active-bg: @common;
+@layout-sider-background: @common;
+
