--- a/src/components/tables/index.less
+++ b/src/components/tables/index.less
@@ -1,17 +1,22 @@
-.search-con{
-  padding: 10px 0;
-  .search{
-    &-col{
-      display: inline-block;
-      width: 200px;
+.tables {
+  .search-con{
+    padding: 10px 0;
+    .search{
+      &-col{
+        display: inline-block;
+        width: 200px;
+      }
+      &-input{
+        display: inline-block;
+        width: 200px;
+        margin-left: 2px;
+      }
+      &-btn{
+        margin-left: 2px;
+      }
     }
-    &-input{
-      display: inline-block;
-      width: 200px;
-      margin-left: 2px;
-    }
-    &-btn{
-      margin-left: 2px;
-    }
+  }
+  &-page {
+    margin-top: 13px;
   }
 }
