--- a/src/assets/less/index.less
+++ b/src/assets/less/index.less
@@ -8,8 +8,8 @@
   // 子集菜单颜色变更
   .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu .ivu-menu-item-active, .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu .ivu-menu-item-active:hover {
     border-right: none;
-    color: @primary-color !important;
-    background: @white-color !important;
+    // color: @primary-color !important;
+    // background: @white-color !important;
   }
   // 面包屑
   .ivu-breadcrumb, .ivu-breadcrumb  a, .ivu-breadcrumb > span:last-child{
