--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,4 @@
 @import '~iview/src/styles/index.less';
 @import './assets/less/index.less';
 @import './assets/less/theme.less';
+@import './assets/less/global.less';
