fix:处理右上角按钮

--- a/src/components/main/main.less
+++ b/src/components/main/main.less
@@ -10,11 +10,22 @@
       margin: 0 auto;
     }
   }
+  .cursorP {
+    cursor: pointer;
+  }
   .header-con{
     background: @primary-color;
     color: @white-color;
     padding: 0 20px;
     width: 100%;
+    // 设置右上角图标
+    .ivu-tooltip-rel{
+      height: 30px;
+      line-height: 30px;
+      i{
+        cursor: pointer;
+      }
+    }
   }
   .main-layout-con{
     height: 100%;
