--- a/src/assets/less/index.less
+++ b/src/assets/less/index.less
@@ -15,4 +15,7 @@
   .ivu-breadcrumb, .ivu-breadcrumb  a, .ivu-breadcrumb > span:last-child{
     color: @white-color;
   }
+  .ivu-table-cell {
+    padding: 0px 8px;
+  }
 }
